Changed back to field availabilities pre only 21 weeks of play

--- a/test.ipynb
+++ b/test.ipynb
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
     "          PlayingField(location='Maitland Park', name='Maitland Main Field',),\n",
     "          PlayingField(location='Central Coast Hockey Park', name='Wyong Main Field'),]\n",
     "\n",
-    "TEAMS_DATA = r'C:\\Users\\c3205\\Documents\\Code\\Jupyter Notebooks\\draw\\data\\2025\\teams'\n",
+    "TEAMS_DATA = r'data\\2025\\teams'\n",
     "CLUBS = []\n",
     "TEAMS = []\n",
     "\n",
@@ -2078,6 +2078,7 @@
      "text": [
       "Number of weekends: 24.0\n",
       "1\n",
+      "Number of timeslots generated is 936.\n",
       "Total rounds found are 21.\n",
       "Number of weekends with games on is 21\n"
      ]
@@ -2449,7 +2450,7 @@
     "                    } \n",
     "\n",
     "field_unavailabilities = {'Maitland Park': \n",
-    "                            {'weekends':[datetime(2025, 4, 19), datetime(2025, 4, 12), datetime(2025, 5, 10), datetime(2025, 5, 24), datetime(2025, 6, 28), datetime(2025,5,3), datetime(2025,6,7) ],  # Enter the saturday of the weekend to be safe and definitely catch Fridays as being out too #\n",
+    "                            {'weekends':[datetime(2025, 4, 19), datetime(2025, 4, 12), datetime(2025, 5, 10), datetime(2025, 5, 24), datetime(2025, 6, 28), datetime(2025,6,7) ], #, datetime(2025,5,3)  # Enter the saturday of the weekend to be safe and definitely catch Fridays as being out too #\n",
     "                            'whole_days':[datetime(2025, 4, 25),],\n",
     "                            'part_days':[],\n",
     "                            },\n",
@@ -2527,7 +2528,7 @@
     "\n",
     "max_day_slot_per_field = {field.location: max(t.day_slot for t in TIMESLOTS if t.field.location == field.location) for field in FIELDS}\n",
     "\n",
-    "UNAVAILABILITY_PATH = r'C:\\Users\\c3205\\Documents\\Code\\Jupyter Notebooks\\draw\\data\\2025\\noplay'\n"
+    "UNAVAILABILITY_PATH = r'data\\2025\\noplay'\n"
    ]
   },
   {
@@ -2567,7 +2568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2575,11 +2576,11 @@
      "output_type": "stream",
      "text": [
       "Warning: Multiple matches found for Tigers vs Wests on 2025-06-20 at any time. Ensuring at least one is scheduled.\n",
-      "[('Tigers PHL', 'Wests PHL', 'PHL', 'Friday', 1, '19:00', 14, '2025-06-20', 11, 'WF', 'Newcastle International Hockey Centre'), ('Tigers PHL', 'Wests PHL', 'PHL', 'Friday', 1, '19:00', 14, '2025-06-20', 11, 'EF', 'Newcastle International Hockey Centre')]\n",
+      "[('Tigers PHL', 'Wests PHL', 'PHL', 'Friday', 1, '19:00', 14, '2025-06-20', 11, 'EF', 'Newcastle International Hockey Centre'), ('Tigers PHL', 'Wests PHL', 'PHL', 'Friday', 1, '19:00', 14, '2025-06-20', 11, 'WF', 'Newcastle International Hockey Centre')]\n",
       "Warning: Multiple matches found for Souths vs Maitland on 2025-05-30 at any time. Ensuring at least one is scheduled.\n",
-      "[('Maitland PHL', 'Souths PHL', 'PHL', 'Friday', 1, '19:00', 11, '2025-05-30', 9, 'WF', 'Newcastle International Hockey Centre'), ('Maitland PHL', 'Souths PHL', 'PHL', 'Friday', 1, '19:00', 11, '2025-05-30', 9, 'EF', 'Newcastle International Hockey Centre')]\n",
+      "[('Maitland PHL', 'Souths PHL', 'PHL', 'Friday', 1, '19:00', 11, '2025-05-30', 9, 'EF', 'Newcastle International Hockey Centre'), ('Maitland PHL', 'Souths PHL', 'PHL', 'Friday', 1, '19:00', 11, '2025-05-30', 9, 'WF', 'Newcastle International Hockey Centre')]\n",
       "Warning: Multiple matches found for Tigers vs  on 2025-08-01 at any time. Ensuring at least one is scheduled.\n",
-      "[('Souths PHL', 'Wests PHL', 'PHL', 'Friday', 1, '19:00', 20, '2025-08-01', 17, 'WF', 'Newcastle International Hockey Centre'), ('Maitland PHL', 'Souths PHL', 'PHL', 'Friday', 1, '19:00', 20, '2025-08-01', 17, 'EF', 'Newcastle International Hockey Centre'), ('Maitland PHL', 'Souths PHL', 'PHL', 'Friday', 1, '19:00', 20, '2025-08-01', 17, 'WF', 'Newcastle International Hockey Centre'), ('Maitland PHL', 'Tigers PHL', 'PHL', 'Friday', 1, '19:00', 20, '2025-08-01', 17, 'EF', 'Newcastle International Hockey Centre'), ('Maitland PHL', 'Wests PHL', 'PHL', 'Friday', 1, '19:00', 20, '2025-08-01', 17, 'WF', 'Newcastle International Hockey Centre'), ('Souths PHL', 'Tigers PHL', 'PHL', 'Friday', 1, '19:00', 20, '2025-08-01', 17, 'EF', 'Newcastle International Hockey Centre'), ('Maitland PHL', 'Tigers PHL', 'PHL', 'Friday', 1, '19:00', 20, '2025-08-01', 17, 'WF', 'Newcastle International Hockey Centre'), ('Souths PHL', 'Tigers PHL', 'PHL', 'Friday', 1, '19:00', 20, '2025-08-01', 17, 'WF', 'Newcastle International Hockey Centre'), ('Maitland PHL', 'Wests PHL', 'PHL', 'Friday', 1, '19:00', 20, '2025-08-01', 17, 'EF', 'Newcastle International Hockey Centre'), ('Tigers PHL', 'Wests PHL', 'PHL', 'Friday', 1, '19:00', 20, '2025-08-01', 17, 'WF', 'Newcastle International Hockey Centre'), ('Tigers PHL', 'Wests PHL', 'PHL', 'Friday', 1, '19:00', 20, '2025-08-01', 17, 'EF', 'Newcastle International Hockey Centre'), ('Souths PHL', 'Wests PHL', 'PHL', 'Friday', 1, '19:00', 20, '2025-08-01', 17, 'EF', 'Newcastle International Hockey Centre')]\n",
+      "[('Maitland PHL', 'Wests PHL', 'PHL', 'Friday', 1, '19:00', 20, '2025-08-01', 17, 'EF', 'Newcastle International Hockey Centre'), ('Souths PHL', 'Tigers PHL', 'PHL', 'Friday', 1, '19:00', 20, '2025-08-01', 17, 'WF', 'Newcastle International Hockey Centre'), ('Souths PHL', 'Wests PHL', 'PHL', 'Friday', 1, '19:00', 20, '2025-08-01', 17, 'EF', 'Newcastle International Hockey Centre'), ('Maitland PHL', 'Souths PHL', 'PHL', 'Friday', 1, '19:00', 20, '2025-08-01', 17, 'EF', 'Newcastle International Hockey Centre'), ('Maitland PHL', 'Tigers PHL', 'PHL', 'Friday', 1, '19:00', 20, '2025-08-01', 17, 'WF', 'Newcastle International Hockey Centre'), ('Souths PHL', 'Tigers PHL', 'PHL', 'Friday', 1, '19:00', 20, '2025-08-01', 17, 'EF', 'Newcastle International Hockey Centre'), ('Maitland PHL', 'Wests PHL', 'PHL', 'Friday', 1, '19:00', 20, '2025-08-01', 17, 'WF', 'Newcastle International Hockey Centre'), ('Tigers PHL', 'Wests PHL', 'PHL', 'Friday', 1, '19:00', 20, '2025-08-01', 17, 'WF', 'Newcastle International Hockey Centre'), ('Maitland PHL', 'Tigers PHL', 'PHL', 'Friday', 1, '19:00', 20, '2025-08-01', 17, 'EF', 'Newcastle International Hockey Centre'), ('Tigers PHL', 'Wests PHL', 'PHL', 'Friday', 1, '19:00', 20, '2025-08-01', 17, 'EF', 'Newcastle International Hockey Centre'), ('Souths PHL', 'Wests PHL', 'PHL', 'Friday', 1, '19:00', 20, '2025-08-01', 17, 'WF', 'Newcastle International Hockey Centre'), ('Maitland PHL', 'Souths PHL', 'PHL', 'Friday', 1, '19:00', 20, '2025-08-01', 17, 'WF', 'Newcastle International Hockey Centre')]\n",
       "Successfully enforced 3 future games.\n",
       "Successfully enforced 44 scheduled games from C:\\Users\\c3205\\Documents\\Code\\Jupyter Notebooks\\draw\\draws\\V2\\schedule V3.xlsx up to Week 2.\n"
      ]
@@ -2832,9 +2833,9 @@
     "    print(f\"Successfully enforced {len(future_games)} future games.\")\n",
     "   \n",
     "X_test = copy.deepcopy(X_final)\n",
-    "# enforce_future_schedule_from_xlsx(model, X_test, r\"C:\\Users\\c3205\\Documents\\Code\\Jupyter Notebooks\\draw\\draws\\V2\\schedule john.xlsx\", [2, 3])\n",
+    "# enforce_future_schedule_from_xlsx(model, X_test, r\"draws\\V2\\schedule john.xlsx\", [2, 3])\n",
     "enforce_future_games(model, X_test, future_games, allow_multiple_matches=True)\n",
-    "enforce_schedule_from_xlsx(model, X_test, r\"C:\\Users\\c3205\\Documents\\Code\\Jupyter Notebooks\\draw\\draws\\V2\\schedule V3.xlsx\", 2)"
+    "enforce_schedule_from_xlsx(model, X_test, r\"draws\\V2\\schedule V3.xlsx\", 2)"
    ]
   },
   {
@@ -2872,7 +2873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2882,7 +2883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3213,9 +3214,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'roster' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[10], line 153\u001b[0m\n\u001b[0;32m    150\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mgrade\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;241m2\u001b[39m\u001b[38;5;250m \u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;250m \u001b[39m\u001b[38;5;28mlist\u001b[39m(num_teams\u001b[38;5;241m.\u001b[39mvalues())[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m/\u001b[39m\u001b[38;5;28mlist\u001b[39m(num_teams\u001b[38;5;241m.\u001b[39mkeys())[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;66;03m# Multiply by 2 because there are 2 teams per game count\u001b[39;00m\n\u001b[0;32m    152\u001b[0m \u001b[38;5;66;03m# Example Usage\u001b[39;00m\n\u001b[1;32m--> 153\u001b[0m analyze_roster(\u001b[43mroster\u001b[49m, data)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'roster' is not defined"
+     ]
+    }
+   ],
    "source": [
     "def analyze_roster(roster: Roster, data: dict):\n",
     "    field_usage = defaultdict(set)  # {date_time: field}\n",
@@ -3425,10 +3438,10 @@
    "outputs": [],
    "source": [
     "import pickle\n",
-    "with open(r\"C:\\Users\\c3205\\Documents\\Code\\Jupyter Notebooks\\draw\\draws\\V1\\X.pkl\", \"rb\") as f:\n",
+    "with open(r\"draws\\V1\\X.pkl\", \"rb\") as f:\n",
     "    loaded_X = pickle.load(f)\n",
     "\n",
-    "with open(r\"C:\\Users\\c3205\\Documents\\Code\\Jupyter Notebooks\\draw\\draws\\V1\\data.pkl\", \"rb\") as f:\n",
+    "with open(r\"draws\\V1\\data.pkl\", \"rb\") as f:\n",
     "    loaded_data = pickle.load(f)\n",
     "roster = convert_X_to_roster(loaded_X, data)\n",
     "analyze_roster(roster, data)\n",
@@ -3484,7 +3497,7 @@
     "\n",
     "    return Roster(weeks=roster_weeks)\n",
     "\n",
-    "roster_File = r'C:\\Users\\c3205\\Documents\\Code\\Jupyter Notebooks\\draw\\draws\\V2\\schedule V3.xlsx'\n",
+    "roster_File = r'draws\\V2\\schedule V3.xlsx'\n",
     "\n",
     "roster = load_roster_from_excel(roster_File, data)"
    ]
