updated so that fixed weeks are not constrained

--- a/test.ipynb
+++ b/test.ipynb
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,6 +263,21 @@
     "        suffix = {1: \"st\", 2: \"nd\", 3: \"rd\"}.get(number % 10, \"th\")\n",
     "    \n",
     "    return f\"{number}{suffix}\"\n",
+    "\n",
+    "def get_round_number_for_week(week, timeslots):\n",
+    "    for t in timeslots:\n",
+    "        if t.week == week:\n",
+    "            return t.round_no\n",
+    "    raise ValueError(f\"Week {week} not found in timeslots when calling get_round_number_for_week\")\n",
+    "\n",
+    "def get_nearest_week_by_date(target_date_str, timeslots, date_format=\"%Y-%m-%d\"):\n",
+    "    target_date = datetime.strptime(target_date_str, date_format).date()\n",
+    "\n",
+    "    def parse_date(t):\n",
+    "        return datetime.strptime(t.date, date_format).date()\n",
+    "\n",
+    "    closest = min(timeslots, key=lambda t: abs((parse_date(t) - target_date).days))\n",
+    "    return closest.week\n",
     "\n",
     "class Constraint(ABC):\n",
     "    \"\"\"Abstract base class for all scheduling constraints.\"\"\"\n",
@@ -358,7 +373,7 @@
     "\n",
     "        games = data['games']\n",
     "        timeslots = data['timeslots']\n",
-    "\n",
+    "        current_week = data['current_week']\n",
     "\n",
     "        phl_games = defaultdict(lambda: defaultdict(list))\n",
     "\n",
@@ -430,7 +445,7 @@
     "                            phl_games[(club, t1, t.week, t.day)][identifier].append(X[key])\n",
     "\n",
     "        for date, day_slots in phl_games.items():\n",
-    "            if date[2] < 5:\n",
+    "            if date[2] <= current_week:\n",
     "                continue\n",
     "            for day_slot, game_vars in day_slots.items():\n",
     "                    model.Add(sum(game_vars) <= 1)    \n",
@@ -453,9 +468,13 @@
     "            print(\"Even number of 2nd grade teams; no forced bye alignment needed.\")\n",
     "            return\n",
     "        \n",
+    "        current_week = data['current_week']\n",
+    "\n",
     "        weeks = {t.week for t in data[\"timeslots\"]}\n",
     "        \n",
     "        for week in weeks:\n",
+    "            if week <= current_week:\n",
+    "                continue\n",
     "            for club in data[\"clubs\"]:\n",
     "                indicator = model.NewBoolVar(f\"is_gosford_vs_{club.name}_week{week}\")\n",
     "                \n",
@@ -519,6 +538,7 @@
     "        per_team_games = {grade.name: (num_rounds[grade.name] // (grade.num_teams - 1) )  if grade.num_teams % 2 == 0 else (num_rounds[grade.name] //grade.num_teams) for grade in data['grades']}\n",
     "\n",
     "        aim_games = min(per_team_games['PHL'], per_team_games['2nd'])\n",
+    "        current_round = get_round_number_for_week(data['current_week'], data['timeslots'])\n",
     "\n",
     "        seconds_dict = defaultdict(lambda: defaultdict(list))\n",
     "        phl_dict = defaultdict(lambda: defaultdict(list))\n",
@@ -542,6 +562,10 @@
     "            if clubs in seconds_dict:\n",
     "                coincide_vars = []  \n",
     "                for round_no, phl_game_vars in phl_rounds.items():\n",
+    "\n",
+    "                    if round_no <= current_round:\n",
+    "                        continue\n",
+    "\n",
     "                    if round_no in seconds_dict[clubs]:\n",
     "                        phl_indicator = model.NewBoolVar(f\"phl_played_{clubs}_{round_no}\")\n",
     "                        model.AddMaxEquality(phl_indicator, phl_game_vars)\n",
@@ -575,6 +599,8 @@
     "\n",
     "        games = data['games']\n",
     "        timeslots = data['timeslots']\n",
+    "\n",
+    "        current_week = data['current_week']\n",
     "\n",
     "        phl_preferences = data['phl_preferences']\n",
     "        allowed_keys = {\"preferred_dates\"}\n",
@@ -617,7 +643,6 @@
     "                            preferred_dates[t.date].append(X[key])\n",
     "\n",
     "                    else:\n",
-    "                        \n",
     "                        club = get_club(t1, data['teams'])\n",
     "                        club_games[(t.week, t.day, t.field.location)][(t.day_slot, club, t1)].append(X[key])\n",
     "\n",
@@ -625,11 +650,17 @@
     "                        club_games[(t.week, t.day, t.field.location)][(t.day_slot, club, t2)].append(X[key])\n",
     "\n",
     "        for date, day_slots in team_games.items():\n",
+    "            if date[0] <= current_week: \n",
+    "                continue\n",
+    "\n",
     "            for day_slot, game_vars in day_slots.items():\n",
     "                if day_slot[1] == 'Newcastle International Hockey Centre': # Stop concurrent PHL games only at Broadmeadow\n",
     "                    model.Add(sum(game_vars) <= 1)    \n",
     "     \n",
     "        for date, day_slots in club_games.items():\n",
+    "            if date[0] <= current_week: \n",
+    "                continue\n",
+    "\n",
     "            for day_slot, game_vars in day_slots.items():\n",
     "                if day_slot[2] == 'Newcastle International Hockey Centre': # Stop concurrent 2nd grade and PHL only at Broadmeadow \n",
     "                    model.Add(sum(game_vars) <= 1)\n",
@@ -638,6 +669,10 @@
     "            model.Add(sum(game_vars) <= 3)\n",
     "\n",
     "        for date, game_vars in preferred_dates.items():\n",
+    "            week_no = get_nearest_week_by_date(date, data['timeslots'])\n",
+    "            if week_no <= current_week:\n",
+    "                continue\n",
+    "\n",
     "            penalty_var = model.NewIntVar(0, len(game_vars), f\"preferred_date_penalty_{date}\")\n",
     "            model.AddAbsEquality(penalty_var, sum(game_vars) - 1)\n",
     "            data['penalties']['phl_preferences']['penalties'].append(penalty_var)\n",
@@ -871,8 +906,10 @@
     "            team1 = team_pairing[0]\n",
     "            team2 = team_pairing[1]\n",
     "            for t in data['timeslots']:\n",
+    "                if t.week <= data['current_week']:\n",
+    "                    continue\n",
     "                game_vars = []\n",
-    "\n",
+    "    \n",
     "                for (t1, t2, grade) in data['games']:\n",
     "                    if t1 in [team1, team2] or t2 in [team1, team2]:\n",
     "                        for field in fields:\n",
@@ -1036,7 +1073,82 @@
     "                    else:\n",
     "                        model.Add(number_var <= no_location_games).OnlyEnforceIf(indicator_var)\n",
     "\n",
+    "class ClubDayConstraint(Constraint):\n",
+    "    \"\"\" This consstraint deals with ensuring club days occur correctly. \"\"\"\n",
+    "    \n",
+    "    def apply(self, model, X, data):\n",
     "\n",
+    "        if 'penalties' not in data:\n",
+    "            data['penalties'] = {'ClubDayConstraint': {'weight': 100000000, 'penalties': []}}\n",
+    "        else:\n",
+    "            data['penalties']['ClubDayConstraint'] = {'weight': 100000000, 'penalties': []}\n",
+    "\n",
+    "        club_days = data['club_days']\n",
+    "        teams = data['teams']\n",
+    "        clubs = data['clubs']\n",
+    "        \n",
+    "        allowed_keys = ['team1', 'team2', 'grade', 'day', 'day_slot', 'time', 'week', 'date', 'field_name', 'field_location']\n",
+    "        for club_name in club_days:   \n",
+    "            if club_name.lower() not in [c.name.lower() for c in clubs]:\n",
+    "                raise ValueError(f'Invalid team name {club_name} in ClubDay Dictionary')   \n",
+    "\n",
+    "            desired_date = club_days[club_name]\n",
+    "            club = get_club_from_clubname(club_name, data['clubs'])\n",
+    "            club_teams = get_teams_from_club(club_name, teams)\n",
+    "            home_field = club.home_field\n",
+    "            \n",
+    "            # Locate all games for the club on the desired date\n",
+    "            club_games = [key for key in X if key[allowed_keys.index('date')] == desired_date.date().strftime('%Y-%m-%d')  \n",
+    "                          and (key[allowed_keys.index('team1')] in club_teams \n",
+    "                               or key[allowed_keys.index('team2')] in club_teams)]\n",
+    "            \n",
+    "            if not club_games:\n",
+    "                raise ValueError(f\"No games found for club {club_name} on {desired_date.date()}\")\n",
+    "            \n",
+    "            teams_by_grade = {}\n",
+    "            for team in club_teams:\n",
+    "                grade = team.rsplit(' ', 1)[1]\n",
+    "                teams_by_grade.setdefault(grade, []).append(team) \n",
+    "                \n",
+    "           # Constraint: Every club team must play\n",
+    "            for team in club_teams:\n",
+    "                model.Add(sum(X[game_key] for game_key in club_games\n",
+    "                              if team in [game_key[allowed_keys.index('team1')], game_key[allowed_keys.index('team2')]]) >= 1) \n",
+    "\n",
+    "            # Constraint: Intra-club matchups for teams in the same grade\n",
+    "            for grade, teams_in_grade in teams_by_grade.items():\n",
+    "                if len(teams_in_grade) > 1:\n",
+    "                    # Create constraints to ensure intra-club matchups\n",
+    "                    intra_club_pairs = list(combinations(teams_in_grade, 2))\n",
+    "                    intra_club_games = [key for key in club_games if \n",
+    "                                        (key[allowed_keys.index('team1')], key[allowed_keys.index('team2')]) in intra_club_pairs or\n",
+    "                                        (key[allowed_keys.index('team2')], key[allowed_keys.index('team1')]) in intra_club_pairs]\n",
+    "                    \n",
+    "\n",
+    "                    no_potential_pairs = len(teams_in_grade) // 2\n",
+    "                    game_vars = []\n",
+    "                    for pair in intra_club_pairs:\n",
+    "                        team1, team2 = pair\n",
+    "                        pair2 = (team2, team1)\n",
+    "                        game_vars.extend([X[game_key] for game_key in intra_club_games\n",
+    "                                            if ((game_key[allowed_keys.index('team1')], game_key[allowed_keys.index('team2')]) == pair or (game_key[allowed_keys.index('team1')], game_key[allowed_keys.index('team2')]) == pair2)])\n",
+    "                        \n",
+    "                    model.Add(sum(game_vars) >= no_potential_pairs)\n",
+    "                    \n",
+    "            # Constraint: Ensure that all games are played at the same field\n",
+    "            field_usage_vars = defaultdict(list)\n",
+    "            for game_key in club_games:\n",
+    "                field_name = game_key[allowed_keys.index('field_name')]\n",
+    "                field_usage_vars[field_name].append(X[game_key])\n",
+    "            \n",
+    "            # Create indicator if field is used\n",
+    "            field_indicator_vars = []\n",
+    "            for field_name, games in field_usage_vars.items():\n",
+    "                field_var = model.NewBoolVar(f'field_used_{club_name}_{field_name}')    \n",
+    "                model.AddMaxEquality(field_var, games)\n",
+    "                field_indicator_vars.append(field_var)\n",
+    "\n",
+    "            model.Add(sum(field_indicator_vars) == 1)\n",
     "\n",
     "# [('phl_preferences', 0), ('PreferredTimesConstraint', 40), ('ClubDayConstraint', 8), ('MaitlandHomeGrouping', 21), ('AwayAtMaitlandGrouping', 17), ('MinimiseClubsOnAFieldBroadmeadow', 155), ('MaximiseClubsPerTimeslotBroadmeadow', 261), ('MinimizeLateGames', 204), ('MaitlandGradeOrder', 17)]\n",
     "\n",
@@ -1137,85 +1249,7 @@
     "            model.Add(penalty_var == 0).OnlyEnforceIf(num_clubs_gt_1.Not())\n",
     "\n",
     "            data['penalties']['AwayAtMaitlandGrouping']['penalties'].append(penalty_var)\n",
-    "\n",
-    "# Has Hard Element          \n",
-    "class ClubDayConstraint(Constraint):\n",
-    "    \"\"\" This consstraint deals with ensuring club days occur correctly. \"\"\"\n",
-    "    \n",
-    "    def apply(self, model, X, data):\n",
-    "\n",
-    "        if 'penalties' not in data:\n",
-    "            data['penalties'] = {'ClubDayConstraint': {'weight': 100000000, 'penalties': []}}\n",
-    "        else:\n",
-    "            data['penalties']['ClubDayConstraint'] = {'weight': 100000000, 'penalties': []}\n",
-    "\n",
-    "        club_days = data['club_days']\n",
-    "        teams = data['teams']\n",
-    "        clubs = data['clubs']\n",
-    "        \n",
-    "        allowed_keys = ['team1', 'team2', 'grade', 'day', 'day_slot', 'time', 'week', 'date', 'field_name', 'field_location']\n",
-    "        for club_name in club_days:   \n",
-    "            if club_name.lower() not in [c.name.lower() for c in clubs]:\n",
-    "                raise ValueError(f'Invalid team name {club_name} in ClubDay Dictionary')   \n",
-    "\n",
-    "            desired_date = club_days[club_name]\n",
-    "            club = get_club_from_clubname(club_name, data['clubs'])\n",
-    "            club_teams = get_teams_from_club(club_name, teams)\n",
-    "            home_field = club.home_field\n",
-    "            \n",
-    "            # Locate all games for the club on the desired date\n",
-    "            club_games = [key for key in X if key[allowed_keys.index('date')] == desired_date.date().strftime('%Y-%m-%d')  \n",
-    "                          and (key[allowed_keys.index('team1')] in club_teams \n",
-    "                               or key[allowed_keys.index('team2')] in club_teams)]\n",
-    "            \n",
-    "            if not club_games:\n",
-    "                raise ValueError(f\"No games found for club {club_name} on {desired_date.date()}\")\n",
-    "            \n",
-    "            teams_by_grade = {}\n",
-    "            for team in club_teams:\n",
-    "                grade = team.rsplit(' ', 1)[1]\n",
-    "                teams_by_grade.setdefault(grade, []).append(team) \n",
-    "                \n",
-    "           # Constraint: Every club team must play\n",
-    "            for team in club_teams:\n",
-    "                model.Add(sum(X[game_key] for game_key in club_games\n",
-    "                              if team in [game_key[allowed_keys.index('team1')], game_key[allowed_keys.index('team2')]]) >= 1) \n",
-    "\n",
-    "            # Constraint: Intra-club matchups for teams in the same grade\n",
-    "            for grade, teams_in_grade in teams_by_grade.items():\n",
-    "                if len(teams_in_grade) > 1:\n",
-    "                    # Create constraints to ensure intra-club matchups\n",
-    "                    intra_club_pairs = list(combinations(teams_in_grade, 2))\n",
-    "                    intra_club_games = [key for key in club_games if \n",
-    "                                        (key[allowed_keys.index('team1')], key[allowed_keys.index('team2')]) in intra_club_pairs or\n",
-    "                                        (key[allowed_keys.index('team2')], key[allowed_keys.index('team1')]) in intra_club_pairs]\n",
-    "                    \n",
-    "\n",
-    "                    no_potential_pairs = len(teams_in_grade) // 2\n",
-    "                    game_vars = []\n",
-    "                    for pair in intra_club_pairs:\n",
-    "                        team1, team2 = pair\n",
-    "                        pair2 = (team2, team1)\n",
-    "                        game_vars.extend([X[game_key] for game_key in intra_club_games\n",
-    "                                            if ((game_key[allowed_keys.index('team1')], game_key[allowed_keys.index('team2')]) == pair or (game_key[allowed_keys.index('team1')], game_key[allowed_keys.index('team2')]) == pair2)])\n",
-    "                        \n",
-    "                    model.Add(sum(game_vars) >= no_potential_pairs)\n",
-    "                    \n",
-    "            # Constraint: Ensure that all games are played at the same field\n",
-    "            field_usage_vars = defaultdict(list)\n",
-    "            for game_key in club_games:\n",
-    "                field_name = game_key[allowed_keys.index('field_name')]\n",
-    "                field_usage_vars[field_name].append(X[game_key])\n",
-    "            \n",
-    "            # Create indicator if field is used\n",
-    "            field_indicator_vars = []\n",
-    "            for field_name, games in field_usage_vars.items():\n",
-    "                field_var = model.NewBoolVar(f'field_used_{club_name}_{field_name}')    \n",
-    "                model.AddMaxEquality(field_var, games)\n",
-    "                field_indicator_vars.append(field_var)\n",
-    "\n",
-    "            model.Add(sum(field_indicator_vars) == 1)\n",
-    "\n",
+    " \n",
     "class MaximiseClubsPerTimeslotBroadmeadow(Constraint):\n",
     "    \"\"\"Maximises the number of clubs per timeslot at Broadmeadow, ensuring diversity in clubs playing within the same timeslot.\"\"\"\n",
     "\n",
@@ -2119,7 +2153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2490,8 +2524,11 @@
     "        if key[10] == 'Maitland Park' and int(key[6]) in weeks:\n",
     "            model.Add(X[key] == 0)\n",
     "\n",
+    "current_week = 6\n",
+    "data['current_week'] = current_week\n",
+    "\n",
     "enforce_future_games(model, X_final, future_games, allow_multiple_matches=True)\n",
-    "enforce_schedule_from_xlsx(model, X_final, r\"draws/V6/schedule Wk1-5.xlsx\", 6, data)\n",
+    "enforce_schedule_from_xlsx(model, X_final, r\"draws/V6/schedule Wk1-5.xlsx\", current_week, data)\n",
     "\n",
     "# # enforce_future_schedule_from_xlsx(model, X_final, r\"draws\\V3\\schedule V2.xlsx\", [ 9, 10, 11, 13, 14, 16, 17, 18, 19])\n",
     "# # enforce_no_maitland_home(model, X_final, [ 8, 10, 14, 17, 20, 24 ]) # 1, \n"
