--- a/test.ipynb
+++ b/test.ipynb
@@ -1578,7 +1578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1876,9 +1876,9 @@
     "\n",
     "\n",
     "class SaveStateCallback(cp_model.CpSolverSolutionCallback):\n",
-    "    def __init__(self, solver, interval=1):\n",
+    "    def __init__(self, variables, interval=1):\n",
     "        super().__init__()\n",
-    "        self.solver = solver\n",
+    "        self.variables = variables                \n",
     "        self.interval = interval\n",
     "        self.counter = 0\n",
     "        self.best_solution = None\n",
@@ -1888,26 +1888,26 @@
     "        self.counter += 1\n",
     "        print(f\"Callback hit at solution {self.counter}\")\n",
     "        if self.counter % self.interval == 0:\n",
-    "            current_obj_value = self.ObjectiveValue()\n",
-    "            if current_obj_value < self.best_obj_value:\n",
-    "                self.best_obj_value = current_obj_value\n",
-    "                self.best_solution = {var: self.Value(var) for var in self.solver.variables}\n",
-    "            self.save_checkpoint()\n",
+    "            obj = self.ObjectiveValue()\n",
+    "            if obj < self.best_obj_value:\n",
+    "                self.best_obj_value = obj\n",
+    "                # save name→value for each var\n",
+    "                self.best_solution = {v.Name(): self.Value(v) for v in self.variables}\n",
+    "                self.save_checkpoint()\n",
     "\n",
     "    def save_checkpoint(self):\n",
     "        with open(\"checkpoint.pkl\", \"wb\") as f:\n",
-    "            pickle.dump(self.best_solution, f)\n",
-    "            pickle.dump(self.best_obj_value, f)\n",
+    "            pickle.dump((self.best_solution, self.best_obj_value), f)\n",
     "        print(\"Checkpoint saved.\")\n",
     "\n",
     "    def load_checkpoint(self):\n",
     "        if os.path.exists(\"checkpoint.pkl\"):\n",
     "            with open(\"checkpoint.pkl\", \"rb\") as f:\n",
-    "                self.best_solution = pickle.load(f)\n",
-    "                self.best_obj_value = pickle.load(f)\n",
+    "                self.best_solution, self.best_obj_value = pickle.load(f)\n",
     "            print(\"Checkpoint loaded.\")\n",
     "            return True\n",
     "        return False\n",
+    "\n",
     "\n",
     "def create_schedule(X, data, constraints, model, conflicts):\n",
     "    \n",
@@ -1936,10 +1936,14 @@
     "    solver.parameters.cp_model_probing_level = 0  # Avoid aggressive pruning to analyze infeasibility\n",
     "\n",
     "    solver.parameters.max_time_in_seconds = 40000 # this last one was close, maybe double it and be ok\n",
-    "    \n",
-    "    callback = SaveStateCallback(solver)\n",
+    "\n",
+    "    all_vars = list(X.values())\n",
+    "    callback = SaveStateCallback(all_vars, interval=5)\n",
     "    if not callback.load_checkpoint():\n",
     "        print(\"No checkpoint found, starting fresh.\")\n",
+    "\n",
+    "    # Solve—note callback is positional\n",
+    "    status = solver.Solve(model, callback)\n",
     "    \n",
     "    status = solver.Solve(model, solution_callback=callback)\n",
     "    # Print the best solution found\n",
